<resources>
    <string name="app_name">TruckTaxi</string>

    <string name="action_settings">Settings</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="app_title"><![CDATA[Gruz&Taxi]]></string>
    <string name="title_on_auth_screen">Для входа в личный кабинет введите присвоенный вам ID и пароль</string>
    <string name="id">ID</string>
    <string name="password">Пароль</string>
    <string name="show_password">Показать пароль</string>
    <string name="input">Войти</string>
    <string name="autorization">Авторизация</string>
    <string name="to_home">Домашний</string>
    <string name="orders">Заказы</string>
    <string name="payments">Платежи</string>
    <string name="chat">Чат</string>
    <string name="settings">Настройки</string>
    <string name="rating">Рэйтинг</string>
    <string name="test_name">Кузнецов Ф.Г.</string>
    <string name="date_of_execution">Оформлен с</string>
    <string name="working">Работаю</string>
    <string name="notifications_title">Новых уведомлений:</string>
    <string name="model">Модель</string>
    <string name="number">Номер</string>
    <string name="body_type">Тип кузова</string>
    <string name="information">Информация</string>
    <string name="routes">Маршруты</string>
    <string name="test_order_number">Заказ</string>
    <string name="test_address_from">ул. Профсоюзная, д.2</string>
    <string name="from_address">Адрес вызова:</string>
    <string name="test_address_to">ул. Моховая, д. 21, к.2</string>
    <string name="address_to">Адрес назначения</string>
    <string name="addresses_to">Адреса назначения</string>
    <string name="test_phone_from">+79027773901</string>
    <string name="test_phone_to">+79641256803</string>
    <string name="get">Взять</string>
    <string name="refuse">Отказаться</string>
    <string name="requistion">Заявка</string>
    <string name="fact">Факт</string>
    <string name="work_hours">Часы работы </string>
    <string name="all_times">Общее время: </string>
    <string name="test_all_time">5 часов</string>
    <string name="worked_hours">Рабочих часов:</string>
    <string name="test_worked_hour">4 часа</string>
    <string name="help">Помощь:</string>
    <string name="test_support_time">1 часа</string>
    <string name="km_count">Количество километров</string>
    <string name="km_cost">Стоимость километра (МКАД):</string>
    <string name="test_km_cost">11 руб.</string>
    <string name="surcharges">Доплаты</string>
    <string name="entry">Въезд:</string>
    <string name="negotiable">договорная</string>
    <string name="loading_unloading">Погрузка-разгрузка:</string>
    <string name="rastentovka">Растентовка:</string>
    <string name="total">Итого:</string>
    <string name="test_total">2500 руб.</string>
    <string name="agree">Согласен</string>
    <string name="disagree">Не согласен</string>
    <string name="date">Дата</string>
    <string name="begin_work">Начало работы:</string>
    <string name="test_begin_work">22.05.2017 в 12:00</string>
    <string name="end_works">Окончание работы:</string>
    <string name="test_end_work">22.05.2017 в 13:00</string>
    <string name="all_worked_hours">Отработано часов:</string>
    <string name="count">Количество:</string>
    <string name="test_hours_count">6 часов</string>
    <string name="minimal_tarif">Минимальный тариф:</string>
    <string name="test_minimal_tarif">5+1</string>
    <string name="hours_cost">Стоимость часа:</string>
    <string name="test_hours_cost">440 руб.</string>
    <string name="mkad_pass">Пропуск МКАД (2ч.):</string>
    <string name="ttk_pass">Пропуск ТТК (2ч.):</string>
    <string name="sum">Сумма:</string>
    <string name="test_sum">2640 руб.</string>
    <string name="test_km_count">90</string>
    <string name="test_km_sum">1080 руб.</string>
    <string name="paymentsions">Выплаты</string>
    <string name="total_on_tarif">Итого по тарифам:</string>
    <string name="test_total_on_tarif">3720 руб.</string>
    <string name="fines">Штрафы:</string>
    <string name="payed_customer">Опачено заказчиком:</string>
    <string name="commissions">Коммисия:</string>
    <string name="test_commissions">211,2 руб.</string>
    <string name="total_pay">Итого к выплате:</string>
    <string name="tets_total_pay">2508,8 руб.</string>
    <string name="personal_data">Личные данные</string>
    <string name="car">Автомобиль</string>
    <string name="edit">Редактировать</string>
    <string name="load_on_error_data">При загрузке данных произошла ошибка</string>
    <string name="bad_auth">Ошибка авторизации, проверьте логин или пароль.</string>
    <string name="please_fill_fields">Заполните поля.</string>
    <string name="invalid_token">Сессия потеряна, требуется переавторизация.</string>
    <string name="no_new_notifcations">Нет новых уведомлений</string>
    <string name="not_define">Не указано</string>

    <string name="orders_fragment_type_error">Not define fragment type "getFragmentType()"</string>
    <string name="orders_future">В очереди</string>
    <string name="orders_current">В работе</string>
    <string name="orders_history">История</string>
    <string name="no_data">Нет данных</string>
    <string name="destination_point">Точка назначения</string>
    <string name="start_point">Точка вызова</string>
    <string name="i_am">Я</string>
    <string name="on">на</string>
    <string name="order_prefix">Заказ</string>
    <string name="ruble">руб.</string>
    <string name="hour_suffix">ч+1</string>
    <string name="need_location_enabled">Необходимо включить геоданные</string>
    <string name="driver_rule">Водительское удостоверение</string>
</resources>
